--- a/src/app/cases/cases.component.scss
+++ b/src/app/cases/cases.component.scss
@@ -2,6 +2,7 @@
   .p-card {
     border-radius: 8px !important;
     background-color: #fcfdf5 !important;
+    cursor: pointer !important;
   }
   .p-button-icon.pi {
     font-size: 1.2rem !important;
