adding case info

--- a/src/app/cases/add-case/add-case.component.html
+++ b/src/app/cases/add-case/add-case.component.html
@@ -4,8 +4,8 @@
     <h1>Add Matter</h1>
 </div>
 </ng-template>
-<form (ngSubmit)="onSubmit()"  [formGroup]="matterForm" #matterFormRef>
-<div class="p-fluid p-formgrid p-grid mx-4">
+<form (ngSubmit)="onSubmit()"  [formGroup]="matterForm" #matterFormRef class="position:'relative">
+<div class="p-fluid p-grid mx-4">
     <p-divider class="p-col-12">
         <div class="p-d-inline-flex p-ai-center">
             <i class="pi pi-user p-mr-2"></i>
