--- a/src/app/cases/start-case/start-case.component.scss
+++ b/src/app/cases/start-case/start-case.component.scss
@@ -6,6 +6,16 @@
   right: 0;
   background: white;
 }
+.header-label {
+  color: #8c632e;
+}
+.sticky-div {
+  position: -webkit-sticky !important;
+  position: sticky !important;
+  background-color: white;
+  overflow-x: hidden;
+}
+
 //#eaf9ff
 
 .mat-drawer {
@@ -15,7 +25,6 @@
     border: solid 1px rgba(0, 0, 0, 0.12);
   }
 }
-
 
 .menubutton {
   color: #8c632e;
@@ -69,7 +78,7 @@
   }
 }
 ::ng-deep {
-  .p-tabview-nav{
+  .p-tabview-nav {
     justify-content: center;
     border-bottom: 0px !important;
   }
@@ -88,7 +97,7 @@
   }
 
   .mat-list-item.mat-list-option.mat-focus-indicator {
-    &:hover{
+    &:hover {
       .mat-list-text {
         color: #8c632e;
         opacity: 1;
@@ -99,14 +108,14 @@
         animation: moveFromLeft 300ms ease-in-out;
       }
     }
-    &.mat-list-single-selected-option{
+    &.mat-list-single-selected-option {
       color: #8c632e;
       position: relative;
       //color: #e67e22;
-      border:0;
-      box-shadow: 0 0 5px #DDD;
-      -moz-box-shadow: 0 0 5px #DDD;
-      -webkit-box-shadow: 0 0 5px #DDD;
+      border: 0;
+      box-shadow: 0 0 5px #ddd;
+      -moz-box-shadow: 0 0 5px #ddd;
+      -webkit-box-shadow: 0 0 5px #ddd;
       border-left: 4px solid #8c632e;
       border-right: 4px solid #8c632e;
       //margin: 0 -4px;
@@ -145,7 +154,6 @@
   }
 }
 
-
 //@media screen and (max-width: 960px) {
 //  ::ng-deep {
 //    .customized-timeline {
@@ -167,7 +175,6 @@
 //    }
 //  }
 //}
-
 
 @-webkit-keyframes moveFromLeft {
   from {
@@ -219,13 +226,13 @@
 .mcd-menu li a.active {
   position: relative;
   color: #e67e22;
-  border:0;
+  border: 0;
   /*border-top: 4px solid #e67e22;
   border-bottom: 4px solid #e67e22;
   margin-top: -4px;*/
-  box-shadow: 0 0 5px #DDD;
-  -moz-box-shadow: 0 0 5px #DDD;
-  -webkit-box-shadow: 0 0 5px #DDD;
+  box-shadow: 0 0 5px #ddd;
+  -moz-box-shadow: 0 0 5px #ddd;
+  -webkit-box-shadow: 0 0 5px #ddd;
 
   /* == */
   border-left: 4px solid #e67e22;
